fix: add css flex gap instead of margins for editorjs blocks

--- a/front/src/utils/editorjs/closed-question-plugin/closedQuestion.css
+++ b/front/src/utils/editorjs/closed-question-plugin/closedQuestion.css
@@ -1,5 +1,4 @@
 .closed-question-tool {
-  margin-top: 1rem;
 }
 
 .closed-question-tool__answer-input {
